connected bootstrap to project, created pages to display films and sessions, created layer of controllers to handle http-requests for current pages